# EEG-Brain-Computer-Interface

./: .gitignore  CMakeLists.txt  test_training_bug.ps1
CapstoneProject/: CMakeLists.txt
CapstoneProject/model train/python/: train_ssvep.py
CapstoneProject/model train/python/misc/: analyze_real_subj_run_log.py  diagnostics.py  diagnostics_v2.py  hparam-diagnostics-v2.py  hparam-diagnostics.py  retrospective_conf_matrices.py  run_mode_log_analysis.py  run_mode_v2_analysis.py  ssvep_explore.py  timing_check.py  train_cnn.py
CapstoneProject/model train/python/trainers/: cnn_trainer.py
CapstoneProject/model train/python/utils/: utils.py
CapstoneProject/src/: CapstoneProject.cpp
CapstoneProject/src/acq/: AcqStreamerFromDataset.cpp  AcqStreamerFromDataset.h  IAcqProvider.h  WindowConfigs.hpp
CapstoneProject/src/acq/Tsinghua-SSVEP-Dataset/: S1_unicorn8_trials.json  load_ssvep_dataset.py
CapstoneProject/src/actuation/: FakeActuation.cpp  FakeActuation.hpp  IActuationProvider.h  ServoDriver.cpp  ServoDriver.h  capstone.ino
CapstoneProject/src/classifier/: FeatureExtractor.hpp  ONNXClassifier.cpp  ONNXClassifier.hpp
CapstoneProject/src/shared/: StateStore.hpp
CapstoneProject/src/stimulus/: HttpServer.cpp  HttpServer.hpp  StimulusController.cpp  StimulusController.hpp
CapstoneProject/src/ui/: Stim.css  Stim.html  Stim.js
CapstoneProject/src/utils/: JsonUtils.hpp  RingBuffer.hpp  RingBuffer.tpp  SWTimer.hpp  SessionPaths.cpp  SessionPaths.hpp  SignalQualityAnalyzer.cpp  Types.h  json.hpp
